# opx-nas-platform-s6000

./: Makefile.am  README.md  configure.ac
debian/: changelog  control
src/: nas_ndi_plat_stat.c
